[tool.poetry]
name = "hst"
version = "0.1.0"
description = ""
authors = ["JaunvanHeerden <jaun.vanheerden@allianceautomation.com.au>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.11"
numpy = "<1.22.0"
numba = "^0.55.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
