[tool.poetry]
name = "hst"
version = "0.1.0"
description = ""
authors = ["JaunvanHeerden <jaun.vanheerden@allianceautomation.com.au>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.11"
numpy = "<1.22.0"
numba = "^0.55.0"
pytest = "^6.2.5"
chart-studio = "^1.1.0"
pyqtgraph = "^0.12.3"
PyQt6 = "^6.2.2"
PyQt5 = "^5.15.6"
tqdm = "^4.62.3"
pypiwin32 = "^223"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
